reduced .card-body padding-top to fix overflow problem

--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ p.text-muted {
 		flex-direction: row;
 		justify-content: center;
 		width: 83%;
+		padding-left: 0;
+    padding-right: 0;
 	}
 
 	.image-container {
@@ -129,7 +131,7 @@ p.text-muted {
 	}
 
 	.card-body {
-		padding-top: 130px;
+		padding-top: 34px;
 		grid-column: 1/3;
     grid-row: 1;
 	}
@@ -152,7 +154,7 @@ p.text-muted {
 	}
 
 	.buttons-container {
-		bottom: 69px;
+		bottom: -20px;
     right: 33%;
 	}
 }
@@ -162,27 +164,9 @@ p.text-muted {
 	display: none;
 }
 
-@media screen and (min-width: 1020px) {
-		.buttons-container {
-			bottom: 63px;
-	}
-}
-
-@media screen and (min-width: 1025px) {
-	.buttons-container {
-		bottom: 23px;
-	}
-}
-
-@media screen and (min-width: 1080px) {
-	.buttons-container {
-		bottom: 2px;
-	}
-}
-
-@media screen and (min-width: 1100px) {
-	.buttons-container {
-		bottom: -21px;
+@media screen and (min-width: 1200px) {
+	.card-body {
+		padding-top: 157px;
 	}
 }
 
